--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,7 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+
 === Advanced Templates 1.2.0
 
 The {productname} 6.5 release includes an accompanying release of the **Advanced Templates** premium plugin.
@@ -49,11 +50,37 @@ As a result, the currently previewed template is now correctly highlighted in th
 
 For information on the **Advanced Templates** plugin, see: xref:advanced-templates.adoc[Advanced Templates].
 
+
 === Merge Tags 1.3.0
 
 The {productname} 6.5 release includes an accompanying release of the **Merge Tags** premium plugin.
 
-**Merge Tags** 1.3.0 includes one fix:
+**Merge Tags** 1.3.0 includes three fixes:
+
+=== The plugin now correctly manages prefixes and suffixes when they are the same.
+//#TINY-9566
+
+In previous versions of **Merge Tags** the plugin mishandled a merge tags’ prefix and suffix when the user placed multiple merge tags within either an inline or block element. This resulted in incorrect management of these prefixes and suffixes during the `setContent` operation.
+
+This mis-management resulted in an unintended repetition of the prefix or suffix occurred, which lead to undesired output.
+
+For example, if the input was: 
+
+[source, html]
+----
+<div>%Tag1% this is a bug %Tag1%</div>
+----
+
+the output, after the `setContent` operation was:
+
+[source, html]
+----
+%Tag1%%% this is a bug %%%Tag1%
+----
+
+As of this **Merge Tags** update, the plugin now splits the array of any matching merge tags that are identified as _odd_ prefixes or suffixes. As a consequence, merge tag prefixes and suffixes that are the same are output as expected.
+
+For information on the **Merge Tags** plugin, see: xref:mergetags.adoc[Merge Tags].
 
 === Right clicking on a merge tag instance presented different highlighting depending on the host browser.
 //#TINY-9848
