--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -172,6 +172,14 @@ As a result, embedding unlisted Vimeo videos into a {productname} editor using t
 
 {productname} 6.5 also incorporates the following changes:
 
+=== The `caption`, `address` and `dt` elements could contain block child elements when the editor schema was set to *HTML 4*.
+//#TINY-9768
+
+In previous versions of {productname}, the `<caption>`, `<dt>` and `<address>` elements could have block elements added as children when the schema was set to *HTML 4*.
+
+The *HTML 4* schema does not support this and, as a consequence, {productname} documents containing such child elements did not validate against HTML 4-specific parsers and validators.
+
+In {productname} 6.5, the editor’s *HTML 4* schema has been corrected. Block elements are now, correctly, considered invalid inside such elements and are automatically unwrapped out of the elements noted above.
 
 [[bug-fixes]]
 == Bug fixes
