--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -186,6 +186,17 @@ In {productname} 6.5, the editor’s *HTML 4* schema has been corrected. Block e
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== The destination category list would include the template’s own category in the *Move to…* dialog.
+//#TINY-9774
+
+When users seek to move a template to another category, a *Move to…* dialog is presented, with a dropdown list of available categories.
+
+In previous versions of {productname}, this list included a redundant category: the current category of the template being moved. If the selected destination category in the *Move to…* dialog matched this original template category, the operation had no effect.
+
+In {productname} 6.5, the destination category list now filters out the category of the template being moved.
+
+Consequently, users no longer see the parent category of the template in the *Move to…* dialog’s category list.
+
 === Closing a dialog would scroll down the document in Safari on macOS. 
 //#TINY-9148
 
