--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,15 +71,16 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
-=== Inserting table consecutively without focus in the editor would result in the table being inserted at the wrong position.
+=== Inserting two tables consecutively without focus in the editor resulted in the second table being inserted at the wrong position.
 //#TINY-3909
 
-In previous versions of {productname}, an issue was identified that resulted in the incorrect execution of the `remove_trailing_br` function by **DomParser**, which resulted in the cursor being focused on the `tr` element instead of `td`.
+In previous versions of {productname}, an issue was identified that resulted in the incorrect execution of the `remove_trailing_br` function by **DomParser**. This resulted in the insertion point focussing on the `<tr>` element instead of the `<td>` element.
 
-As a consequence, when inserting a table with the focus on `tr`, the table would be placed in the wrong location. To fix this, the `remove_trailing_br` function was extracted, with the default behavior now set to execute within the serializer. Although the function remains in the parser, its default setting has been modified to not execute by default, as removing it entirely could cause compatibility issues.
+As a consequence, when inserting a table with the focus on `<tr>`, the table would be placed in the wrong location.
 
-[NOTE]
-The configuration related to this issue will be deprecated in `DomParserSetting` for a future release of {productname}.
+To fix this, the `remove_trailing_br` function was extracted, with the default behavior now set to execute within the serializer. Although the function remains in the parser, its default setting has been modified to not execute by default, as removing it entirely could cause compatibility issues.
+
+NOTE: The configuration related to this issue will be deprecated in `DomParserSetting` in a future {productname} release.
 
 [[security-fixes]]
 == Security fixes
