--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -73,14 +73,16 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following improvements:
 
-=== Quickbar toolbars are now positioned in the middle of the selection horizontally, if the selection contains more than one table cell.
+=== If the selection contains multiple table cells, Quickbar toolbars now present at the middle or beginning of the selection, horizontally.
 //#TINY-8297
 
-In previous versions of {productname}, when multiple table cell elements were highlighted, a blue background would indicate their selection. However, the when the selection was highlighted the quickbar would incorrectly appear to point at the text in the last cell, giving the impression that formatting changes would only affect that specific cell's context.
+When multiple table cell elements are selected, by default, a blue background indicates their selection.
 
-In {productname} 6.5 now, when multiple table cell elements are selected, the quickbar plugin calculates the bounding box of the selected cells. Using this information, the quickbar will now be positioned appropriately, ensuring it aligns with the selected cells.
+In previous {productname} versions, however, once a cell selection was made, the Quickbar toolbar presented as pointing at the contents of the last cell in the selection. This gave the (incorrect) visual impression that formatting changes would only affect the contents of cell.
 
-As a result, any formatting changes made using the quickbar will apply to the entire selection of cells.
+In {productname} 6.5, when multiple table cells are selected, the Quickbar plugin calculates the bounding box of the selected cells. Using this information, the Quickbar now presents with the toolbar’s pointer directed at either the middle or the beginning of the selection, considered horizontally.
+
+This presentation makes it clearer that any Quickbar buttons will be applied to the entire selection.
 
 [[additions]]
 == Additions
