--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -236,6 +236,17 @@ In {productname} 6.5, the editor’s *HTML 4* schema has been corrected. Block e
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== Inserting two tables consecutively without focus in the editor resulted in the second table being inserted at the wrong position.
+//#TINY-3909
+
+In previous versions of {productname}, an issue was identified that resulted in the incorrect execution of the `remove_trailing_br` function by **DomParser**. This resulted in the insertion point focusing on the `<tr>` element instead of the `<td>` element.
+
+As a consequence, when inserting a table with the focus on `<tr>`, the table would be placed in the wrong location.
+
+To fix this, the `remove_trailing_br` function was extracted, with the default behavior now set to execute within the serializer. Although the function remains in the parser, its default setting has been modified to not execute by default, as removing it entirely could cause compatibility issues.
+
+NOTE: The configuration related to this issue will be deprecated in `DomParserSetting` in a future {productname} release.
+
 === The destination category list would include the template’s own category in the *Move to…* dialog.
 //#TINY-9774
 
