--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -253,6 +253,15 @@ In {productname} 6.5, the editor’s *HTML 4* schema has been corrected. Block e
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== In some cases, exiting a `blockquote` element could fail when the insertion point was positioned at the end of the `blockquote` element.
+//#TINY-9794
+
+There was an issue with exiting a blockquote element when the insertion point was positioned at the end of the element. this issue arose because, when inserting a new block, the check to determine if the block is empty treated nodes containing a zero-width space (ZWSP) as non-empty.
+
+As part of this update, {productname} 6.5 now correctly recognizes elements containing a ZWSP as empty blocks.
+
+As a consequence, exiting blockquote elements now happens even when the insertion point is at the end of the element, as expected.
+
 === Context toolbars would display the incorrect status for the Advanced List plugin buttons.
 //#TINY-9680
 
