DOC-2045: Added TINY-9280 to the release notes. (#2755)
* DOC-2045: Added TINY-9280 to the release notes.

* Update modules/ROOT/pages/6.5-release-notes.adoc

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

* Update modules/ROOT/pages/6.5-release-notes.adoc

* copy edit: s/available//.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* @tiny-ben-tran’s suggested edit with copy-edit.

* Copy-edit of @tiny-ben-tran’s suggested edit.

* Update modules/ROOT/pages/6.5-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

---------

Co-authored-by: brian-forte <brian.forte@tiny.cloud>
Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -220,6 +220,15 @@ As a result, embedding unlisted Vimeo videos into a {productname} editor using t
 
 {productname} 6.5 also incorporates the following changes:
 
+=== List items in a combo box were not announced by screen readers.
+//#TINY-9280
+
+For example, the URL text-entry field in the Link dialog is a combobox. When this element is focused with a screen reader, it is announced as a combobox and pressing the down arrow shows the available list items.
+
+In previous versions of {productname}, however, none of these items were announced by the screen reader as they were selected, making these items effectively invisible to screen reader users.
+
+With this update, listed items in a combobox can be announced by screen readers, as expected.
+
 === When dragging and dropping image elements within the editor the `dragend` event would sometimes not fire when Firefox was the host browser.
 //#TINY-9694
 
